--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,51 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+   
+  monospace;
 }
+.nav-bar{
+  display: flex;
+  justify-content: space-between;
+  padding: 1.5rem;
+}
+h1{
+  margin: 0;
+}
+.contact-list{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  border-bottom: 1px solid;
+}
+.ava{
+  height: 44px;
+  border: 2px solid;
+  border-radius: 100%;
+  width: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 1rem;
+}
+
+.primary-div{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.primary-div h3{
+  gap: 3rem;
+
+
+}
+.secondary-div a{
+text-decoration: none;
+}
+span{
+  margin: 0;
+}
+
+
+
